--- a/cave/index.html
+++ b/cave/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Cave</title>
+    <title>Cave clone</title>
     <link rel="icon" type="image/GIF" href="res/favicon.ico"/>
+    <link rel="apple-touch-icon" href="apple-touch-icon.png"/>
     <meta name="viewport" content="width=321,user-scalable=no" />
+    <meta name="apple-mobile-web-app-title" content="Cave clone" />
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="full-screen" content="yes"/>
     <meta name="screen-orientation" content="portrait"/>
